# CompressionFun

./: .gitignore  Dockerfile  README.md  big_local_architecture.py  check_assets.py  improved_autoencoder.py  main.py  mlclient.py  pyproject.toml  register_data.py  submit_all_jobs.py  test_inference.py  train.py  utils.py  visualize_autoencoder.py  visualize_local_model.py
.azureml/: Dockerfile  compute.yaml  environment.yaml  job.yaml  pyproject.toml
